Added packet system

--- a/Week7/ClientAndServer/ClientAndServer/Client.csproj
+++ b/Week7/ClientAndServer/ClientAndServer/Client.csproj
@@ -63,5 +63,11 @@
       <DependentUpon>ClientForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Packets\Packets.csproj">
+      <Project>{3d76b8bd-a612-4393-a037-f34999801937}</Project>
+      <Name>Packets</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
